# jak-ide

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  PLAN.md  README.md  RUST-MIGRATION.md
.claude/agents/: architect.md  frontend.md  reviewer.md  rust.md
.claude/prompts/: feature.md
.claude/rules/: react.md  typescript.md
.claude/skills/: create-feature.md  refactor.md
backend/: .env.example  package-lock.json  package.json  tsconfig.json
backend/src/: config.ts  index.ts  server.ts
backend/src/routes/: ai.ts  auth.ts  files.ts  fonts.ts  git.ts  projects.ts  run.ts  terminal.ts
backend/src/security/: paths.ts
backend/src/services/: aiService.ts  aiTools.ts  auth.ts  claudeCodeService.ts  commandRunner.ts  contextBuilder.ts  fileService.ts  fonts.ts  gitService.ts  projects.ts  shells.ts
backend/src/ws/: terminal.ts
backend/workspace/: Dockerfile  README.md
backend/workspace/go/: main.go
backend/workspace/javascript/: index.js
backend/workspace/php/: UserController.php
backend/workspace/python/: app.py
backend/workspace/react/: Counter.tsx
core/: Cargo.toml
core/src/: auth.rs  db.rs  error.rs  files.rs  fonts.rs  health.rs  index.rs  lsp.rs  main.rs  paths.rs  projects.rs  proxy.rs  run.rs  runner.rs  search.rs  shells.rs  state.rs  symbols.rs  terminal.rs  watch.rs
core/src/ai/: claude_code.rs  direct.rs  mod.rs
core/src/code_intelligence/: composer.rs  mod.rs  navigation.rs  parser.rs  refs.rs  resolver.rs  symbol_index.rs  types.rs
core/src/docker/: exec.rs  inspect.rs  mod.rs
core/src/git/: actions.rs  clone.rs  exec.rs  mod.rs  ops.rs  remote_ops.rs  stash.rs
desktop/: electron-builder.yml  main.js  package-lock.json  package.json  preload.js  prompt.html  updater.js
desktop/scripts/: build-backend.mjs  build-core.mjs  copy-renderer.mjs  dev-core.mjs  make-icon.py  resolve-cargo.mjs
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  jakide.d.ts  main.tsx  store.test.ts  store.ts  styles.css  theme.test.ts  theme.ts  types.ts
frontend/src/components/: BranchMenu.tsx  BranchWidget.tsx  ChatPanel.tsx  CloneDialog.tsx  ConflictLineResolver.tsx  ContentSearchPanel.tsx  DbPanel.tsx  DockerPanel.tsx  EditorGroupView.tsx  EditorPane.tsx  FileExplorer.tsx  FileIcon.tsx  FileNameSearchPanel.tsx  FindInFiles.tsx  FindResults.tsx  FolderPicker.tsx  GitPanel.tsx  GoToSymbol.tsx  MainMenu.tsx  MarkdownPreview.tsx  MergeEditor.tsx  MergeModal.tsx  ProblemsPanel.tsx  ProjectMenu.tsx  PromptDialog.tsx  PullDialog.tsx  RunPanel.tsx  SearchEverywhere.tsx  SearchModal.tsx  SettingsPanel.tsx  Splitter.tsx  StatusBar.tsx  TabBar.tsx  TerminalInstance.tsx  TerminalPanel.tsx  Toasts.tsx  WindowControls.tsx  icons.tsx
frontend/src/hooks/: useChangeActions.ts  useChatStream.ts  useCurrentLineBlame.ts  useEditorChrome.ts  useFileOps.ts  useGitAnnotate.ts  useGitLogMenu.ts  useImplementations.ts  useLsp.ts  useMarkerProblems.ts  useNavHistory.ts  useOpenFileAt.ts  useProblems.ts  useVcsFileMenu.ts
frontend/src/lib/: aiStore.ts  ansi.test.ts  ansi.ts  chatHistory.test.ts  chatHistory.ts  chatHistoryStore.ts  codeHighlight.test.ts  codeHighlight.ts  conflicts.test.ts  conflicts.ts  dbConnectionsStore.test.ts  dbConnectionsStore.ts  dbStore.test.ts  dbStore.ts  diffStat.test.ts  diffStat.ts  dockerLogsService.ts  dockerStore.test.ts  dockerStore.ts  editParser.ts  editorGroups.test.ts  editorGroups.ts  editorRegistry.ts  fileTree.test.ts  fileTree.ts  findGroup.test.ts  findGroup.ts  findStore.ts  folderTypeIcons.test.ts  folderTypeIcons.tsx  gitAnnotate.test.ts  gitAnnotate.ts  gitViewStore.ts  (+18 more)
(+104 files in other folders)
