[package]
name = "jakide-core"
version = "0.1.0"
edition = "2021"
description = "JakIDE Rust core — file engine, project management (axum HTTP sidecar)"

[[bin]]
name = "jakide-core"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "process", "io-util"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Index + search (Stage 1)
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
fuzzy-matcher = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
# Live index updates (Stage 1b)
notify = "6"

[profile.release]
opt-level = "z"
lto = true
strip = true
