[package]
name = "jakide-core"
version = "0.1.0"
edition = "2021"
description = "JakIDE Rust core — file engine, project management (axum HTTP sidecar)"

[[bin]]
name = "jakide-core"
path = "src/main.rs"

[dependencies]
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "process", "io-util", "time"] }
tokio-stream = "0.1"
# Terminal (Stage 3)
portable-pty = "0.8"
# Reverse-proxy fallthrough to Node (localhost HTTP) + the direct-API AI engine
# (HTTPS to api.anthropic.com via rustls; Stage 7 apikey/oauth).
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls", "http2", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Index + search (Stage 1)
rusqlite = { version = "0.32", features = ["bundled"] }
ignore = "0.4"
fuzzy-matcher = "0.3"
grep-regex = "0.1"
grep-searcher = "0.1"
grep-matcher = "0.1"
# Project-wide find/replace (Phase 3): capture-group expansion + NoExpand literal replace
regex = "1"
# Live index updates (Stage 1b)
notify = "6"
# Kill a run's whole process group (the streaming runner, U14/U15)
libc = "0.2"
# Database tool window: typed per-engine pools (not the `Any` driver — it can't
# decode common types like Postgres NUMERIC/NAME, which broke real queries in
# testing). chrono/rust_decimal cover timestamps and money/decimal columns.
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "tls-rustls", "mysql", "postgres", "sqlite", "chrono", "rust_decimal"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
rust_decimal = "1"

[profile.release]
opt-level = "z"
lto = true
strip = true
